--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
           - '1.4'
           - '1.5'
           - '1.6'
-          - 'nightly'
+          #- 'nightly'
         os:
           - ubuntu-latest
         arch:
