--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [compat]
+Compat = "3"
 ExprTools = "0.1"
 ForwardDiff = "0.10"
 Requires = "0.5, 1"
