--- a/Project.toml
+++ b/Project.toml
@@ -4,12 +4,14 @@ authors = ["Mohamed Tarek <mohamed82008@gmail.com> and contributors"]
 version = "0.4.0"
 
 [deps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 ExprTools = "e2ba6199-217a-4e67-a87a-7c52f15ade04"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [compat]
+ChainRulesCore = "1"
 Compat = "3"
 ExprTools = "0.1"
 ForwardDiff = "0.10"
