--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
 [compat]
 ChainRulesCore = "1"
-Compat = "3"
+Compat = "3, 4"
 ExprTools = "0.1"
 ForwardDiff = "0.10"
 Requires = "0.5, 1"
