--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,20 @@ ExprTools = "e2ba6199-217a-4e67-a87a-7c52f15ade04"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 
+[weakdeps]
+FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
+Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+[extensions]
+FiniteDifferencesExt = "FiniteDifferences"
+ForwardDiffExt = "ForwardDiff"
+ReverseDiffExt = "ReverseDiff"
+TrackerExt = "Tracker"
+ZygoteExt = "Zygote"
+
 [compat]
 ChainRulesCore = "1"
 Compat = "3, 4"
