--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,7 @@ AbstractDifferentiationZygoteExt = "Zygote"
 [compat]
 ChainRulesCore = "1"
 DiffResults = "1"
+Documenter = "1"
 ExprTools = "0.1"
 FiniteDifferences = "0.12"
 ForwardDiff = "0.10"
